resources/assets/sass/base/base.scss
/* ... */
.phone-icon-for-mobile {
    display: flex !important;

    svg {
        pointer-events: none;
    }

    @media (min-width: $md) {
        display: none !important;
    }
}

.strong {
    font-weight: 700;
}

.hero__slide__inside {
}

.hero .js-hero .hero__slide__inside {
    transition: 0.8s all ease-in-out;
}

.hero .js-hero .hero__slide__inside.hidden {
    opacity: 0;
    visibility: hidden;
}

.link-to-apartments-list {
    transition: 0.25s all ease-in-out;
}

.link-to-apartments-list:hover {
    background: $darkBlue;
    color: $white;
}

// NEW STYLES FOR FILTERS

.vue-slider {
    width: 95% !important;
    margin: 0 auto;
}

.vue-slider .vue-slider-rail {
  background: #dadada;
  cursor: pointer;
}

.vue-slider .vue-slider-process {
    background: #262359;
}

.vue-slider .vue-slider-dot {
    border: 4px solid #262359;
    background-color: white;
    border-radius: 50%;
    width: 16px;
    height: 16px;
    cursor: pointer;
}

.vue-slider .vue-slider-mark-label {
  font-size: 14px;
  line-height: 19px;
  text-transform: uppercase;
  font-weight: 800;
  color: #8f8f8f;
}

.znajdzLokal__filters__item.--sliders .znajdzLokal__filters__title {
   margin-top: 40px
}

.filters-investment-image {
    height: 92px;
    object-fit: cover;
}

.vue-slider-marks .vue-slider-mark:first-child .vue-slider-mark-label{
    margin-left: -7px !important;
    transform: translateX(0) !important
}

.vue-slider-marks .vue-slider-mark:last-child .vue-slider-mark-label{
    margin-right: 7px !important;
    transform: translateX(-100%) !important
}

.apartment-list-item-image {
    width: 320px;
}

.bg-light-blue {
    background: $lightBlue;
}

.clear-filters--desktop {
    display: none;
    font-size: 13px;
    line-height: 18px;
    cursor: pointer;
    margin-left: auto;
    @include breakpoint($md) {
        display: block;
      }
}

.mfp-img {
    zoom: 100%;
}

// .splide-investment .splide__slide {
//     text-align: left;
// }



.goverlay--custom {
    background: #fff !important;
}

.glightbox-clean .gslide-media {
    box-shadow: none !important;;
}

.glightbox-clean .gcontainer .gnext, .glightbox-clean .gcontainer .gprev {
    height: 32px;
    width: 32px;
    z-index: 100;
    background: $darkBlue;
    border-radius: 50%;
    position: absolute;
    top: 48%;
    z-index: 9999;
    border: none;
    cursor: pointer;
    opacity: 0.9;
    transition: .25s opacity ease-in-out;
    &:hover {
        opacity: 1;
    }

    &:before {
        content: "";
        background: url("../images/arrow_white.svg") center no-repeat;
        width: 12px;
        height: 17px;
        display: block;
        margin: 0 auto;
        transform: rotate(90deg);
    }
}

.glightbox-clean .gcontainer .gprev {
    transform: rotate(180deg);
}

.glightbox-clean .gcontainer .gclose {
    background: $darkBlue;
    opacity: 0.9;
    transition: .25s opacity ease-in-out;
    &:hover {
        opacity: 1;
    }
}

.glightbox-clean .gcontainer  .gclose svg {
    width: 10px;;
}

.zoom-in {
    height: 32px;
    width: 32px;
    z-index: 100;
    background: $darkBlue;
    border-radius: 50%;
    position: absolute;
    bottom: 1%;
    left: 45%;
    z-index: 9999;
    border: none;
    cursor: pointer;
    color: #fff;
    opacity: 0.9;
    font-size: 22px;
    transition: .25s opacity ease-in-out;
    &:hover {
        opacity: 1;
    }

    @include breakpoint($md) {
        left: 48%;
    }
}

.zoom-out {
    height: 32px;
    width: 32px;
    z-index: 100;
    background: $darkBlue;
    border-radius: 50%;
    position: absolute;
    bottom: 1%;
    font-size: 22px;
    left: 55%;
    color: #fff;
    z-index: 9999;
    border: none;
    cursor: pointer;
    opacity: 0.9;
    transition: .25s opacity ease-in-out;
    &:hover {
        opacity: 1;
    }

    @include breakpoint($md) {
        left: 52%;
    }
}

.style-chooser .vs__search::placeholder,
.style-chooser .vs__dropdown-toggle,
.style-chooser .vs__dropdown-menu {
  background: #e5e5e5;
  border: none;
  color: #394066;
  width: 92px;
}

.style-chooser .vs__clear,
.style-chooser .vs__open-indicator {
  fill: #394066;
}

.style-chooser .vs__selected {
    font-weight: 800;
    font-size: 14px;
    line-height: 19px;
    text-transform: uppercase;
    color: #394066;
    align-items: flex-start;
    padding-top:0;
    margin-top: 0;
}

.style-chooser .vs__actions {
    padding-top: 0;
    display: none;
}

.style-chooser .vs__dropdown-option--highlight {
    background: $darkBlue;
}

.style-chooser .vs__dropdown-menu {
    min-width: 124px;
}

.sort-asc-button {
    display: block;
    width: 18px;
    height: 18px;;
    background: url("../images/sort.svg") center no-repeat;
    background-size: contain;
    cursor: pointer;
}

.sort-asc-button--rotate {
    transform: rotate(180deg);
}

.znajdzLokal__main__meta__content--flex {
    display: flex;

    @include breakpoint($md) {
        display: none;
    }
}

.phone-modal .modal__content {
    position: relative;
    margin-top: 0;
}

.phone-modal .modal__close {
    z-index: 1;
}

.phone-modal .modal__container {
    padding-top: 2rem;
}

.phone-modal .modal__content h3 {
    margin-bottom: 1rem;
    font-weight: 700;
    font-size: 22px;
    padding-right: 5rem;
}

.phone-modal .modal__content  input {
    border-bottom: 1px solid $darkBlue;
    margin-top: 18px;
}

.acceptance-1, .acceptance-2, .acceptance-3 {
    margin-bottom: 12px;
}

.apartments360-modal .modal__container {
    width: 100%;
    height: 100%;
    background: #f7f7f7;
    padding: 0;
}

.apartments360-modal .modal__close {
    top: 18px;
    right: 18px;
    background: $darkBlue;
    color: $white;
    width: 34px;
    height: 34px;
    border-radius: 4px;
    opacity: .9;
    transition: .25s opacity ease;
    padding-bottom: 2px;
}

.apartments360-modal .modal__close:hover {
    opacity: 1;
}

.apartments360Iframe {
    width: 100%;
    height: 100%;
}
/* ... */

